core/webhook/github/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - flux-webhook.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webhook-receiver
          port: 80
