core/webhook/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cloudflare-operator.io/content: ${BASE_DOMAIN}
    cloudflare-operator.io/type: CNAME
spec:
  ingressClassName: nginx
  rules:
    - host: flux-webhook.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
